<resources>
    <string name="app_name">Databases</string>
    <string name="action_add_book">Add Book</string>
    <string name="action_add_user">Add User</string>
    <string name="action_book_details">Details</string>
    <string name="action_edit_book">Edit</string>
    <string name="action_delete_book">Delete</string>
    <string name="action_share_book">Share on Twitter</string>
    <string name="action_give_book">Give book</string>
    <string name="action_edit_user">Edit</string>
    <string name="action_delete_user">Delete</string>

    <string name="title_activity_main">Books</string>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_add_book">Add Book</string>
    <string name="title_activity_book_details">Details of %1$s</string>
    <string name="title_activity_twitter_login">Login to Twitter</string>

    <string name="title_section_books">Books</string>
    <string name="title_section_users">Users</string>
    <string name="title_section_add_book">Add Book</string>

    <string name="label_book_title">Title:</string>
    <string name="label_book_author">Author:</string>
    <string name="label_book_cover">Cover:</string>
    <string name="label_book_description">Description:</string>
    <string name="label_book_total_amount">Total amount:</string>
    <string name="amount_book_default">1</string>

    <string name="label_text_empty">There are no books in library</string>
    <string name="label_text_user_empty">There are no users</string>
    <string name="label_button_add_book">Add Book</string>
    <string name="label_button_add_user">Add user</string>

    <string name="label_button_confirm_add_book">OK</string>
    <string name="label_button_cancel_add_book">Cancel</string>

    <string name="label_dialog_add_user_title">Input user name:</string>
    <string name="label_dialog_add_user_ok_button">Add</string>
    <string name="label_dialog_add_user_cancel_button">Cancel</string>
    <string name="label_dialog_edit_user_title">Edit user name:</string>
    <string name="label_dialog_edit_user_ok_button">OK</string>
    <string name="label_dialog_edit_user_cancel_button">Cancel</string>

    <string name="label_dialog_give_book_title">Give books to %1$s</string>
    <string name="label_dialog_give_book_ok_button">OK</string>
    <string name="label_dialog_give_book_cancel_button">Cancel</string>

    <string name="label_dialog_add_cover_title">Choose cover:</string>
    <string name="label_dialog_add_book_choice_camera">Take Photo</string>
    <string name="label_dialog_add_book_choice_gallery">Choose from Library</string>

    <string name="label_title_activity_edit_book">Edit Book</string>

    <string name="toast_author_empty">Input Author of book</string>
    <string name="toast_title_empty">Input Title of book</string>
    <string name="toast_gallery_error">Can\'t open app for choose cover!</string>
    <string name="toast_camera_error">Can\'t start camera app!</string>
    <string name="toast_error_login">Error: %1$s</string>
    <string name="toast_tweet_too_long">Too long tweet!</string>
    <string name="toast_tweet_success">Success post tweet with id: %1$s</string>
    <string name="toast_tweet_failure">Error: %1$s</string>

    <string name="label_book_row_title">Title: %1$s</string>
    <string name="label_book_row_author">Author: %1$s</string>
    <string name="label_book_row_total_amount">Total: %1$d</string>
    <string name="label_book_row_available_amount">Available: %1$d</string>

    <string name="label_description_header">Description:</string>
    <string name="label_description_text_empty">No description.</string>

    <string name="label_book_details_title">Title: %1$s</string>
    <string name="label_book_details_author">Author: %1$s</string>
    <string name="label_book_details_user_list_header">Users who take this book:</string>
    <string name="label_book_details_user_list_empty">All books in library</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main_drawer">Navigation</string>

    <string name="tweet_message">I have book %1$s, %2$s and want to let world know about it!</string>
    <string name="tweet_characters_left">Characters left: %1$d</string>
    <string name="title_dialog_tweet">Tweet:</string>
    <string name="label_dialog_tweet_send">Send</string>
    <string name="label_dialog_tweet_cancel">Cancel</string>

    <string name="toast_internet_check">Check internet connection!</string>

</resources>
