<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".AddBookActivity">

    <LinearLayout
        android:id="@+id/confirm_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="@dimen/layout_book_confirm_padding">


        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCancelButtonClick"
            android:text="@string/label_button_cancel_add_book"/>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onOkButtonClick"
            android:text="@string/label_button_confirm_add_book"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="@dimen/layout_book_section_padding"
        android:weightSum="10">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/label_book_title"/>

        <EditText
            android:id="@+id/title_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/author_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:orientation="horizontal"
        android:padding="@dimen/layout_book_section_padding"
        android:weightSum="10">

        <TextView
            android:id="@+id/author_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/label_book_author"/>

        <EditText
            android:id="@+id/author_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cover_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/author_layout"
        android:orientation="horizontal"
        android:padding="@dimen/layout_book_section_padding"
        android:weightSum="10">

        <TextView
            android:id="@+id/cover_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/label_book_cover"/>

        <ImageView
            android:id="@+id/cover_image"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_book_cover_height"
            android:layout_weight="7"
            android:onClick="onCoverImageViewClick"
            android:src="@drawable/ic_book"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/total_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/confirm_layout"
        android:padding="@dimen/layout_book_section_padding"
        android:weightSum="10">

        <TextView
            android:id="@+id/total_amount_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/label_book_total_amount"/>

        <EditText
            android:id="@+id/total_amount_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:digits="0123456789"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/total_amount_layout"
        android:layout_below="@id/cover_layout"
        android:orientation="horizontal"
        android:padding="@dimen/layout_book_section_padding"
        android:weightSum="10">

        <TextView
            android:id="@+id/description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/label_book_description"/>

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"/>
    </LinearLayout>



</RelativeLayout>
